crates/pgt_cli/tests/snapshots/assert_cmd__cli_check_command.snap
---
source: crates/pgt_cli/tests/assert_cmd.rs
expression: "normalize_output(output.status, &stdout, &stderr)"
snapshot_kind: text
---
status: failure
stdout:
Checked 1 file in <duration>. No fixes applied.
Found 1 error.
stderr:
tests/fixtures/test.sql:1:1 syntax ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Invalid statement: syntax error at or near "tqjable"
  
  > 1 │ alter tqjable test drop column id;
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    2 │ 
  

check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
